✔Endorsed-dirs triggers Launch4j crash, copy libs in pkg. Affects #285.